--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ p2{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.logo{
+
+    border-radius: 55px;
+}
+
 .card{
 
     box-shadow: 1px 1px 5px #ccc;
@@ -47,6 +52,14 @@ p2{
     max-width: 186px;
 }
 
+.imgvideo3{
+    float: top;
+    border: transparent thin solid;
+    padding: 5px;
+    margin: 0px 10px 10px 0;
+    max-width: 186px;
+}
+
 .texto1{
     font-family: sans-serif;
     float: top;
@@ -63,6 +76,9 @@ p2{
     padding: 20;
     border-radius: 5px;
     max-width: 200px;
+    position: relative;
+    top: 20px;
+    left: 500px;
 }
 
 .videos2{
@@ -71,8 +87,28 @@ p2{
     padding: 20;
     border-radius: 5px;
     max-width: 200px;
+    position: relative;
+    top: -265px;
+    left: 750px;
+    nav-up: current;
+}
+
+.videos3{
+    box-shadow: 1px 1px 5px #ccc;
+    background-color: white;
+    padding: 20;
+    border-radius: 5px;
+    max-width: 200px;
+    position: relative;
+    top: -516px;
+    left: 250px;
+    nav-up: current;
 }
 
 .total{
     float: center;
 }
+
+
+
+
