--- a/css/style.css
+++ b/css/style.css
@@ -1,114 +1,47 @@
-body{
-    font-family: sans-serif;
-    background-color: #f0f0f0;
-    text-align: center;
-}
 
-h2{
-color: rgb(255, 0, 0);
-font-family: Arial, Helvetica, sans-serif;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Link Center</title>
 
-p{
-    color: rgb(0, 0, 0);
-}
+    <link rel="stylesheet" href="css/style.css">
 
-p2{
-    color: rgb(83, 79, 79);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.logo{
-
-    border-radius: 55px;
-}
-
-.card{
-
-    box-shadow: 1px 1px 5px #ccc;
-    background-color: white;
-    padding: 50px;
-    border-radius: 7px;
-
-}
-
-.card-top{
-    text-align: center;
-}
-
-.imgvideo1{
-    float: top;
-    border: transparent thin solid;
-    padding: 5px;
-    margin: 0px 10px 10px 0;
-    max-width: 186px;
-}
-
-.imgvideo2{
-    float: top;
-    border: transparent thin solid;
-    padding: 5px;
-    margin: 0px 10px 10px 0;
-    max-width: 186px;
-}
-
-.imgvideo3{
-    float: top;
-    border: transparent thin solid;
-    padding: 5px;
-    margin: 0px 10px 10px 0;
-    max-width: 186px;
-}
-
-.texto1{
-    font-family: sans-serif;
-    float: top;
-}
-
-.texto2{
-    font-family: sans-serif;
-    float: top;
-}
-
-.videos{
-    box-shadow: 1px 1px 5px #ccc;
-    background-color: white;
-    padding: 20;
-    border-radius: 5px;
-    max-width: 200px;
-    position: relative;
-    top: 20px;
-    left: 500px;
-}
-
-.videos2{
-    box-shadow: 1px 1px 5px #ccc;
-    background-color: white;
-    padding: 20;
-    border-radius: 5px;
-    max-width: 200px;
-    position: relative;
-    top: -265px;
-    left: 750px;
-    nav-up: current;
-}
-
-.videos3{
-    box-shadow: 1px 1px 5px #ccc;
-    background-color: white;
-    padding: 20;
-    border-radius: 5px;
-    max-width: 200px;
-    position: relative;
-    top: -516px;
-    left: 250px;
-    nav-up: current;
-}
-
-.total{
-    float: center;
-}
-
-
-
-
+</head>
+<body>
+<div class="card">
+    <div class="card-top">
+        <img class="logo" src="img/logo.png" alt="">
+         <h2 class="title">Link Center</h2>
+        <p>Aqui você tera acesso a download de varios conteudos criados por darkkk, principalmente, bots.</p2>
+            <div class="info">
+                <p2>O site é bem simples, basta clicar no conteudo desejado que ira aparecer os botões de download.</p2>
+                </div>
+        </p2>
+       </div>
+       <div class="videos2"></div>
+       <div class="videos">
+        <div class="imgs">
+        <img class="imgvideo1" src="img/video1.png" alt="">
+        <div class="botao1"> <a href="Videos-links/bot313.php"><button style="background: #ffffff; border-radius: 6px; padding: 15px; cursor: pointer; color: rgb(0, 0, 0); border: none; font-size: 16px;">ROBO(bot) PARA WHATSAPP COM 313 COMANDOS | BOT DE WHATSAPP PARA TERMUX</button></a></div>
+        </div>
+    </div>
+    <img class="branco" src="img/branco.png" alt="">
+    <div class="videos2">
+        <div class="imgs2">
+        <img class="imgvideo2" src="img/video1.png" alt="">
+        <div class="botao1"> <a href="Videos-links/bot313.php"><button style="background: #ffffff; border-radius: 6px; padding: 15px; cursor: pointer; color: rgb(0, 0, 0); border: none; font-size: 16px;">ROBO(bot) PARA WHATSAPP COM 313 COMANDOS | BOT DE WHATSAPP PARA TERMUX</button></a></div>
+        </div>
+    </div>
+    <div class="videos3">
+        <div class="imgs3">
+        <img class="imgvideo3" src="img/video1.png" alt="">
+        <div class="botao1"> <a href="Videos-links/bot313.php"><button style="background: #ffffff; border-radius: 6px; padding: 15px; cursor: pointer; color: rgb(0, 0, 0); border: none; font-size: 16px;">ROBO(bot) PARA WHATSAPP COM 313 COMANDOS | BOT DE WHATSAPP PARA TERMUX</button></a></div>
+        </div>
+    </div>
+    </div>
+<script src="index.js"></script>
+</body>
+</html>
