--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,9 @@ p2{
 
     box-shadow: 1px 1px 5px #ccc;
     background-color: white;
-    padding: 50px;
+    padding: 300px;
     border-radius: 7px;
+    text-align: center;
 
 }
 
